add client side download of chart data

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -166,7 +166,8 @@
                 "downloadChartDataMsgTitle": "Info",
                 "downloadChartDataMsgMessage": "Aktuelle Chartdaten herunterladen?",
                 "downloadChartDataMsgButtonYes": "Ja",
-                "downloadChartDataMsgButtonNo": "Nein"
+                "downloadChartDataMsgButtonNo": "Nein",
+                "downloadAllText": "Alle Chartdaten herunterladen"
             }
         }
     },
