--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -120,7 +120,7 @@
                 "toggleLegendVisibility": "Legendensichtbarkeit umstellen",
                 "exportToPngText": "Download Grafik",
                 "toggleGrouping": "Gruppierung tauschen",
-                "toggleScale": "Y-Achsenskalierung tauschen",
+                "toggleScale": "linear/log",
                 "toggleUncertainty": "Messungenauigkeit umschalten",
                 "displayIdentificationThreshold": "Daten < NWG anzeigen",
                 "irixPrintText": "DokPool",
@@ -590,7 +590,7 @@
                 "removeSeriesQuestionTpl": "Serie '{0}' entfernen?",
                 "startLabel": "Start",
                 "toggleDataBelowIdentificationThreshold": "Daten < NWG anzeigen",
-                "toggleScaleBtnText": "Skalierung tauschen",
+                "toggleScaleBtnText": "linear/logarithmisch",
                 "endLabel": "Ende",
                 "axisText": "Achse"
             }
@@ -1429,7 +1429,7 @@
                 "enableAutorefreshLabel": "Automatisch aktualisieren",
                 "dataBelowThresholdButton": "Daten kleiner NWG anzeigen",
                 "refreshInterval": "Aktualisierungsintervall",
-                "toggleScaleButton": "Skalierung tauschen",
+                "toggleScaleButton": "linear/logarithmisch",
                 "axisText": "Achse"
             }
         }
