--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -389,6 +389,15 @@
             }
         }
     },
+    "Koala.view.grid.StationSearch": {
+        "config": {
+            "data": {
+                "stationSearchTitle": "Gamma Dose Rate Stations",
+                "searchInProgressText": "searching…",
+                "noRecordsFoundText": "No stations found"
+            }
+        }
+    },
     "Koala.view.main.Main": {
         "config": {
             "data": {
