added ODL station search in mobile-client

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1484,6 +1484,7 @@
                 "addLayerButtonText": "Externen WMS hinzufügen",
                 "permalinkButtonText": "Permalink",
                 "spatialSearchTitle": "Räumliche Suche",
+                "stationSearchTitle": "ODL Sondenstandorte",
                 "metadataSearchTitle": "Daten und Dienste des Bfs"
             }
         }
