Move RoutingLegendTree to east region

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -494,7 +494,8 @@
                 "downloadMessage": "Layerdaten herunterladen?",
                 "downloadButtonYes": "Ja",
                 "downloadButtonNo": "Nein",
-                "outputFormatText": "Ausgabeformat"
+                "outputFormatText": "Ausgabeformat",
+                "title": "Legende"
             }
         }
     },
