--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -493,7 +493,8 @@
                 "downloadMessage": "Download Layerdaten?",
                 "downloadButtonYes": "Yes",
                 "downloadButtonNo": "No",
-                "outputFormatText": "Output Format"
+                "outputFormatText": "Output Format",
+                "title": "Legend"
             }
         }
     },
