allow selection of role

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -587,7 +587,8 @@
                 "title": "Layer freigeben",
                 "layerNameLabel": "Name des neuen Layers",
                 "okButtonLabel": "Freigeben",
-                "cancelButtonLabel": "Abbrechen"
+                "cancelButtonLabel": "Abbrechen",
+                "roleComboLabel": "Rolle auswählen"
             }
         }
     },
