--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -586,7 +586,8 @@
                 "title": "Share layer",
                 "layerNameLabel": "Name of the new layer",
                 "okButtonLabel": "Share",
-                "cancelButtonLabel": "Cancel"
+                "cancelButtonLabel": "Cancel",
+                "roleComboLabel": "Select role"
             }
         }
     },
