fix i18n class name

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -580,7 +580,7 @@
             }
         }
     },
-    "Koala.view.window.CloneWindow": {
+    "Koala.view.window.ShareWindow": {
         "config": {
             "data": {
                 "title": "Share layer",
