show message if no template is selected upon cloning

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -587,7 +587,8 @@
                 "maxFeaturesLabel": "Maximale Anzahl an Objekten",
                 "layerNameLabel": "Name des neuen Layers",
                 "okButtonLabel": "Klonen",
-                "cancelButtonLabel": "Abbrechen"
+                "cancelButtonLabel": "Abbrechen",
+                "emptyTemplateMessage": "Bitte wählen Sie eine Vorlage aus."
             }
         }
     },
