--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -455,6 +455,23 @@
             }
         }
     },
+    "Koala.view.panel.FeatureGrid": {
+        "config": {
+            "data": {
+                "downloadLayerText": "Download",
+                "geoJsonText": "GeoJSON",
+                "shapefileText": "Shapefile",
+                "saveLayerText": "Save layer",
+                "wfstSuccess": "Changes successfully saved.<br>Objects inserted: {0}<br>Objects updated: {1}<br>Objects deleted: {2}",
+                "wfstFailure": "Changes could not be saved. Please try again later.",
+                "wfstLockFail": "The WFS-T Lock request was rejeceted",
+                "wfstLockSuccess": "The WFS-T Lock request was successful. The lock will timeout in {0} minute(s)",
+                "wfstLockExpired": "The WFS-T Lock has expired",
+                "wfstLockButton": "WFS-T Lock",
+                "layerNotSavedYet": "The layer has not been saved yet"
+            }
+        }
+    },
     "Koala.view.panel.Header": {
         "config": {
             "data": {
