improve print error handling

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -356,7 +356,8 @@
                 "labelUse": "…verwenden?",
                 "northArrow": "Nordpfeil",
                 "scalebar": "Massstabsleiste",
-                "unlinkTooltip": "Link entfernen"
+                "unlinkTooltip": "Link entfernen",
+                "templateBrokenMessage": "Das Template enthält Fehler und kann nicht verwendet werden."
             }
         }
     },
