--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -355,7 +355,8 @@
                 "labelUse": "…use?",
                 "northArrow": "North arrow",
                 "scalebar": "Scale bar",
-                "unlinkTooltip": "Remove link"
+                "unlinkTooltip": "Remove link",
+                "templateBrokenMessage": "The template is broken and cannot be used."
             }
         }
     },
