Replaces numberfield with combobox

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -172,7 +172,7 @@
                 "quoteText": "Anführungszeichen (\" \") verwenden",
                 "okText": "Ok",
                 "cancelText": "Abbrechen",
-                "magnificationFactor": "Vergrößerungsfaktor"
+                "magnification": "Vergrößerung"
             }
         }
     },
