--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -194,6 +194,20 @@
             }
         }
     },
+    "Koala.view.container.DrawToolsContainer": {
+        "config": {
+            "data": {
+                "pointTooltip": "Punkt zeichnen",
+                "lineTooltip": "Linie zeichnen",
+                "polygonTooltip": "Polygon zeichnen",
+                "postItTooltip": "Notiz hinzufügen",
+                "postItWindowTitle": "Notiz",
+                "postItInputTooLongText": "Der Text ist für eine korrekte Darstellung zu lang. Trotzdem hinzüfgen?",
+                "modifyTooltip": "Zeichenobjekt bearbeiten",
+                "deleteTooltip": "Zeichenobjekt löschen"
+            }
+        }
+    },
     "Koala.view.container.RedliningToolsContainer": {
         "config": {
             "data": {
