Reorder tools in Menu

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -441,7 +441,7 @@
                 "wmsimport": "WMS hinzuladen",
                 "vectorimport": "Vektordaten laden",
                 "print": "Drucken",
-                "drawandmeasure": "Zeichnen",
+                "tools": "Werkzeuge",
                 "draw": "Zeichnen",
                 "measure": "Messen",
                 "share": "Teilen",
