--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -440,7 +440,7 @@
                 "wmsimport": "Add external WMS",
                 "vectorimport": "Import local files",
                 "print": "Print",
-                "drawandmeasure": "Draw & Measure",
+                "tools": "Tools",
                 "draw": "Draw",
                 "measure": "Measure",
                 "share": "Share",
