--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -550,7 +550,8 @@
         "config": {
             "data": {
                 "title": "Topics",
-                "tooltip": "Change Layer Set",
+                "toggleLayerSetTooltip": "Change Layer Set",
+                "closeTooltip": "Close",
                 "tooltext": "Change Topic",
                 "btnTextResetThemeTreeFiltering": "All Layers",
                 "btnTooltipResetThemeTreeFiltering": "Resets filtering of available topics.",
