Introduces Pin/Unpin button for TimeSeries

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -480,6 +480,9 @@
                 "chartSlctnBarChartBtn": "Säulendiagramm",
                 "rodosPanelTitle": "RODOS-Filter",
                 "helpTooltip": "Hilfe",
+                "pinTooltip": "Anheften",
+                "unpinTooltip": "Lösen",
+                "closeTooltip": "Schließen",
                 "headerTitle": "GEOPORTAL",
                 "gridTabTitle": "Tabellarische Ansicht",
                 "htmlTabTitle": "Information",
