--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -479,6 +479,9 @@
                 "chartSlctnBarChartBtn": "Bar Chart",
                 "rodosPanelTitle": "RODOS-Filter",
                 "helpTooltip": "Help",
+                "pinTooltip": "Pin",
+                "unpinTooltip": "Unpin",
+                "closeTooltip": "Close",
                 "headerTitle": "GEOPORTAL",
                 "gridTabTitle": "Table view",
                 "htmlTabTitle": "Information",
